adding remove sku method
